--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <div id="container">
+  <main id="container">
     <div class="box" id="sedans">
       <img src="images/icon-sedans.svg" alt="">
       <h1>Sedans</h1>
@@ -35,11 +35,11 @@
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
       <a href="#">Learn More</a>
     </div>
-  </div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Samuel Pletain</a>.
-  </div>
+  </footer>
 </body>
 </html>
